# compute-pipeline

./: README.md  cabal.project  compute-engine.cabal  default.nix  nlp-pipeline.cabal  nlp-query.cabal  semantic-parser-api-compute.cabal  shell.nix  uphere-db.cabal
BNC/: parse.hs  shell.nix
app/: analysis-daemon.hs  analysis-runner.hs  api.hs  cmdclient.hs  compute-client.hs  compute-server.hs  construction_builder.hs  corenlp-batch.hs  corenlp-daemon.hs  corenlp-runner.hs  devel.hs  query.hs  rss-monitor.hs  stresstest.hs
cloud-haskell-util/: cloud-haskell-util.cabal
cloud-haskell-util/src/CloudHaskell/: Client.hs  Closure.hs  QueryQueue.hs  Server.hs  Socket.hs  Type.hs  Util.hs
compute-so-types/: compute-so-types.cabal
compute-so-types/src/: Types.hs
compute-so-types/src/Worker/: API.hs  Type.hs
compute-so/SO/: Handles.hs  MyCode.hs
compute-so/src/SO/: Handle.hs  Handles.hs  MyCode.hs  Process.hs
compute-so/src/Worker/: API.hs
compute-worker/: README.md  compute-worker.cabal  default.nix
compute-worker-test/: compute-worker-test.cabal
compute-worker-test/src/: MyTest.hs
compute-worker-test/test/Test/: InitHandshakeSpec.hs  MyTestSpec.hs
compute-worker/app/: cell.hs  compute-client.hs  compute-server.hs  stresstest.hs
compute-worker/app/compute/: HotswapMain.c  Main.hs  Main1.hs
compute-worker/app/orchestrator/: Main.hs
compute-worker/app/worker/: worker.hs
compute-worker/src/: Compute.hs  ComputeOld.hs
compute-worker/src/CloudHaskell/: Util.hs
compute-worker/src/Compute/: API.hs  Handler.hs  Network.hs  Orchestrator.hs  Task.hs  Type.hs  Worker.hs
compute-worker/src/SemanticParserAPI/: Compute.hs
compute-worker/test/: test.hs
experiment/: compact-test.hs  shell.nix
extract/: extract.hs  shell.nix
extract_description/: extract.hs  shell.nix
investopedia/: dictionary.hs  dump.hs  extract.hs  shell.nix  words.hs
jobqueue-client/: jobqueue-client.cabal
jobqueue-client/app/: jobqueueclient.hs
jobqueue-client/src/JobQueue/Client/: Command.hs  Job.hs  Phase.hs  Type.hs
jobqueue-server/: jobqueue-server.cabal
jobqueue-server/exe/: jobqueueserver.hs
jobqueue-server/src/JobQueue/Server/: JobAssign.hs  Work.hs  Yesod.hs
jobqueue-type/: jobqueue-type.cabal
jobqueue-type/src/JobQueue/: Config.hs  JobJson.hs  JobQueue.hs  JobType.hs
jobqueue-types/: jobqueue-types.cabal
jobqueue-types/src/JobQueue/: Config.hs  JobQueue.hs
jobqueue-types/src/JobQueue/Server/: Type.hs
lib/Pipeline/Application/: Construction.hs  Run.hs  RunBunch.hs  Tokenizer.hs
lib/Pipeline/Run/: StanfordNER.hs  Util.hs  WikiEL.hs
loadtest/: load.hs
news-parser/: main.hs  shell.nix
nlp-pipeline/: README.md  default.nix  nlp-pipeline.cabal  shell.nix
nlp-pipeline/app/: corenlp-batch.hs  corenlp-daemon.hs  devel.hs  main.hs  rss-monitor.hs
nlp-pipeline/config/: config.json  config.json.bill
nlp-pipeline/lib/Annot/: NER.hs  SUTime.hs
nlp-pipeline/lib/Pipeline/: Run.hs  Type.hs  Util.hs
nlp-pipeline/scripts/: dump.hs  load.hs  test_beam.hs  token.hs
nlp-pipeline/src/Pipeline/: Load.hs
nlp-pipeline/trash/NYT/: Article.hs
nlp-pipeline/trash/NewsAPI/: Article.hs
nlp-query/: ChangeLog.md  nlp-query.cabal  shell.nix
nlp-query/app/: Main.hs  api.hs
nlp-query/network-util/: ChangeLog.md  default.nix  network-util.cabal
nlp-query/script/: test-client.hs
nlp-query/src/: Query.hs
pipeline/: shell.nix
predicate_matrix/: ChangeLog.md  default.nix  predicate-matrix.cabal  predicate.hs  shell.nix
rss_crawler/: README.md  default.nix  dump_articles.py  dump_link.py  dump_recent_articles.py  dump_recent_rss.py  get_links_in_recent_rss.py  get_links_in_rss.py  get_past_rss_snapshots.py  inspect_redis.py  parse_article.py  rss_urls.py  run.sh  status.py  test.json
rss_crawler/RSS/: hash.py  http.py  logging.py  rss.py  rss_feed.py  server.py  url.py
rss_crawler/sqlcmd/: table.sql
rss_crawler/tagsoup/: hedis.hs  parse.hs  shell.nix  tagsoup.hs
rss_crawler/tests/: test_parse_public_news.py
script/: README.md  nytimes-storage.hs  nytimes.hs  shell.nix
script/nyt-dbsync/: nytimes.hs  shell.nix
script/nyt-filestore/: nytimes-storage.hs  shell.nix
src/: Query.hs
src/CloudHaskell/: QueryQueue.hs  Server.hs  Util.hs
src/DB/: Operation.hs  Type.hs  Util.hs
src/Network/: Util.hs
src/Pipeline/: Batch.hs  Load.hs  Run.hs  Type.hs  Util.hs
src/Query/: Type.hs
src/QueryServer/: Type.hs
src/SemanticParserAPI/: Compute.hs
storage-manager/: storage-manager.cabal
storage-manager/app/: store.hs
storage-manager/src/: Storage.hs
storage-manager/src/Storage/: CURL.hs  Config.hs  Operation.hs  Type.hs  Util.hs
storage-manager/src/Storage/Operation/: Backup.hs
task-corenlp/: ChangeLog.md  task-corenlp.cabal
task-reuters/: ChangeLog.md  task-reuters.cabal
task-reuters/app/: analysis-daemon.hs
task-reuters/config/: config.json  config.json.larry.modori  config.json.mark
task-reuters/src/Pipeline/: Load.hs  Run.hs  Type.hs  Util.hs
task-reuters/src/Pipeline/App/: Analysis.hs  AnalysisDaemon.hs  CoreNLP.hs  CoreNLPDaemon.hs
task-reuters/src/Pipeline/Run/: Analysis.hs  CoreNLP.hs
task-reuters/src/Task/: Reuters.hs
task-reuters/temp/Pipeline/App/: CoreNLP.hs
task-reuters/temp/Pipeline/Source/RSS/: Article.hs
task-semantic-parser/: task-semantic-parser.cabal
task-semantic-parser/src/Task/: SemanticParser.hs
temporal/: README.md  ner.hs  shell.nix  sutime.hs  sutimener.hs
temporal/Annot/: NER.hs  SUTime.hs  Util.hs
tf-idf/: main.hs  shell.nix
trash/: Analysis.hs  WikiEL.hs  api.hs
uphere-db/: ChangeLog.md  uphere-db.cabal
ygp-pipeline/: config.rss.json.default  config.ygp.json.default
ygp_ner/: AnnotatedSentences.txt  ChangeLog.md  Indicators.txt  README.md  TestRow.txt  shell.nix  ygp-ner.cabal
ygp_ner/data/: tables.txt
ygp_ner/item/: Annotator.hs  DataSender.hs  Recognizer.hs
ygp_ner/lib/: Constant.hs  Import.hs  Parser.hs  Pattern.hs  Statistics.hs  Tokenizer.hs  Type.hs  Usage.hs  Util.hs  View.hs
ygp_ner/num/: Annotator.hs
ygp_ner/tests/: Test.hs
ygp_ner/util/: Analyzer.hs
(+128 files in other folders)
