name:                compute-so-types
version:             0.1.0.0
synopsis:
description:
homepage:
bug-reports:
license:             OtherLicense
license-files:       LICENSE
author:
maintainer:
copyright:
category:            System
build-type:          Simple
cabal-version:       >=1.10
stability:           alpha

library
  exposed-modules:     Types
  hs-source-dirs:      src
  build-depends:       base >= 4.9.1.0 && < 5.0
                     , deepseq >= 1.4.2.0 && < 1.5
                     , text >= 1.2.2.1 && < 1.3
                     , wai
  default-language:    Haskell2010
