name:                compute-so-types
version:             0.1.0.0
synopsis:
description:
homepage:
bug-reports:
license:             OtherLicense
license-files:       LICENSE
author:
maintainer:
copyright:
category:            System
build-type:          Simple
cabal-version:       >=1.10
stability:           alpha

library
  exposed-modules:     Worker.Type
  hs-source-dirs:      src
  build-depends:       base
                     , aeson
                     , base64-bytestring
                     , deepseq
                     , distributed-process
                     , network-transport
                     , stm
                     , text
                     , wai
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Werror
