name:                compute-worker-test
version:             0.1.0.0
synopsis:            testing compute worker
description:         testing compute worker
license:             OtherLicense
license-file:        LICENSE
author:              UpHere, Inc.
maintainer:          Ian-Woo Kim <ianwookim@gmail.com>
copyright:           UpHere, Inc. 2018
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

test-suite spec
  type: exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       Test.InitHandshakeSpec
  build-depends:       base
--                      , distributed-process
                     , distributed-process-lifted
                     , hspec
                     , network-transport
                     , network-transport-tcp
                     , transformers
                     --
                     , cloud-haskell-util
                     , compute-worker

  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:      -threaded
                    -O2
