Name:		jobqueue-client
Version:	0.0
Synopsis:	job scheduler for event generation
Description: 	job scheduler for event generation
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends:   base >= 4
                   --
                 , aeson
                 , attoparsec,
                 , bytestring,
                 , hslogger
                 , containers
                 , filepath
                 , text
                 , transformers
                   --
                 , jobqueue-types
                 , storage-manager

  Exposed-Modules:
                   JobQueue.Client.Type
                   JobQueue.Client.Job
                   JobQueue.Client.Phase
                   JobQueue.Client.Command
