name:		jobqueue-client
version:	0.0
synopsis:	job scheduler for event generation
description: 	job scheduler for event generation
license: 	BSD3
license-file:	LICENSE
author:		Ian-Woo Kim
maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
build-Type: 	Simple
cabal-Version:  >= 1.8

library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  build-depends:   base >= 4
                   --
                 , aeson
                 , attoparsec
                 , bytestring
                 , hslogger
                 , containers
                 , distributed-process
                 , filepath
                 , text
                 , transformers
                   --
                 , jobqueue-types
                 , storage-manager

  exposed-modules:
                   JobQueue.Client.Type
                   JobQueue.Client.Job
                   JobQueue.Client.Phase
                   JobQueue.Client.Command

Executable jobqueueclient
  Main-is: jobqueueclient.hs
  hs-source-dirs: app
  Build-Depends: base >= 4
               -- , aeson
               -- , attoparsec
               -- , bytestring
               -- , containers
               , distributed-process
               , distributed-process-lifted
               -- , network-transport
               -- , stm
               -- , transformers
               -- --
               , cloud-haskell-util
               -- , jobqueue-types
               -- , network-transport-uphere
               --
               , jobqueue-client


  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
