Name:		jobqueue-server
Version:	0.0
Synopsis:	job scheduler for event generation
Description: 	job scheduler for event generation
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8



Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base >= 4
                 --
               , aeson
               , bytestring
               , conduit
               , containers
               , data-default
               , shakespeare
               , template-haskell
               , text
               , transformers
               , unordered-containers
               , wai
               , yesod
               , yesod-form
               --
               , jobqueue-types
               , storage-manager


  Exposed-Modules: JobQueue.Server.JobAssign
                   JobQueue.Server.Work
                   JobQueue.Server.Yesod
  Other-Modules:
                   Import



Executable jobqueueserver
  Main-is: jobqueueserver.hs
  hs-source-dirs: exe
  Build-Depends: base >= 4
               , aeson
               , attoparsec
               , bytestring
               , containers
               , wai-extra
               , wai
               , yesod
               , yesod-core
               --
               , jobqueue-type
               , jobqueue-server


  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
