Name:		jobqueue-server
Version:	0.0
Synopsis:	job scheduler for event generation
Description: 	job scheduler for event generation
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8



Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base >= 4
                 --
               , aeson
               , bytestring
               , conduit
               , containers
               , data-default
               , distributed-process
               , text
               , transformers
               , unordered-containers
               --
               , jobqueue-types
               , storage-manager


  Exposed-Modules: JobQueue.Server.JobAssign
                   JobQueue.Server.Work
                   JobQueue.Server.Yesod



Executable jobqueueserver
  Main-is: jobqueueserver.hs
  hs-source-dirs: exe
  Build-Depends: base >= 4
               , aeson
               , attoparsec
               , bytestring
               , containers
               , distributed-process
               , network-transport
               , stm
               --
               , cloud-haskell-util
               , jobqueue-types
               , network-transport-uphere
               --
               , jobqueue-server


  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
