Name:		jobqueue-types
Version:	0.0
Synopsis:	common library for job scheduler for event generation
Description: 	common library job scheduler for event generation
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.2


Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields
                -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base > 4
               , containers
               , aeson
               , text
               --
               , storage-manager

  Exposed-Modules: JobQueue.Config
                   JobQueue.JobQueue
                   JobQueue.Server.Type
