Name:		storage-manager
Version:	0.0
Synopsis:	storage-manager
Description: 	storage-manager
-- License: 	
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.2


Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, 
                 mtl>2, filepath > 1,
                 attoparsec >= 0.10,
                 bytestring > 0.9, 
                 directory, 
                 process
  Exposed-Modules: 
                   Storage
                   Storage.CURL
                   Storage.Type
                   Storage.Util
		 
