name:                task-semantic-parser
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             OtherLicense
license-file:        LICENSE
author:              Ian-Woo Kim
maintainer:          ianwookim@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Task.SemanticParser
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.10
                     , aeson
                     , binary
                     , bytestring
                     , containers
                     , data-default
                     , deepseq
                     , distributed-process
                     , inline-java
                     , jvm
                     , lens
                     , stm
                     , text
                     --
                     , HCoreNLP
                     , cloud-haskell-util
                     , semantic-role-labeler
  hs-source-dirs:      src
  default-language:    Haskell2010
